# myactuator_rmd_ros

./: License.md  ReadMe.md
.github/workflows/: build.yml
myactuator_rmd_bringup/: CMakeLists.txt  ReadMe.md  package.xml
myactuator_rmd_bringup/launch/: myactuator_rmd_control.launch.py  myactuator_rmd_simulation_control.launch.py
myactuator_rmd_controllers/myactuator_rmd_state_broadcaster/: CMakeLists.txt  myactuator_rmd_state_broadcaster_plugins.xml  package.xml
myactuator_rmd_controllers/myactuator_rmd_state_broadcaster/include/myactuator_rmd_state_broadcaster/: myactuator_rmd_state_broadcaster.hpp  visibility_control.h
myactuator_rmd_controllers/myactuator_rmd_state_broadcaster/src/: myactuator_rmd_state_broadcaster.cpp  myactuator_rmd_state_broadcaster_parameters.yaml
myactuator_rmd_description/: CMakeLists.txt  ReadMe.md  package.xml
myactuator_rmd_description/config/: myactuator_rmd_controllers.yaml
myactuator_rmd_description/doc/: UpdateCadModel.md
myactuator_rmd_description/launch/: myactuator_rmd.launch.py  visualize_myactuator_rmd.launch.py
myactuator_rmd_description/meshes/visual/X10S2V3/: X10S2V3.stp
myactuator_rmd_description/meshes/visual/X10V3/: X10V3.stp
myactuator_rmd_description/meshes/visual/X10_100/: X10_100.step
myactuator_rmd_description/meshes/visual/X10_40/: X10_40.step
myactuator_rmd_description/meshes/visual/X4/: X4.prt
myactuator_rmd_description/meshes/visual/X4_24/: X4_24.STEP
myactuator_rmd_description/meshes/visual/X4_3/: X4_3.step
myactuator_rmd_description/meshes/visual/X6S2/: X6S2.STEP
myactuator_rmd_description/meshes/visual/X6V2/: X6V2.STEP
myactuator_rmd_description/meshes/visual/X6_40/: X6_40.step
myactuator_rmd_description/meshes/visual/X6_7/: x6-7.step
myactuator_rmd_description/meshes/visual/X8HV3/: X8HV3.stp
myactuator_rmd_description/meshes/visual/X8ProHV3/: X8ProHV3.stp
myactuator_rmd_description/meshes/visual/X8ProV2/: X8ProV2.STEP  X8ProV2.prt  X8ProV2.stp
myactuator_rmd_description/meshes/visual/X8S2V3/: X8S2V3.stp
myactuator_rmd_description/meshes/visual/X8V2/: X8V2.STEP  X8V2.prt
myactuator_rmd_description/meshes/visual/X8_20/: X8_20.step
myactuator_rmd_description/meshes/visual/X8_25/: X8_25.step
myactuator_rmd_description/meshes/visual/X8_60/: X8_60.step
myactuator_rmd_description/meshes/visual/X8_90/: X8_90.STEP
myactuator_rmd_description/meshes/visual/x6_8/: X6_8.step
myactuator_rmd_description/rviz/: visualize_myactuator_rmd.rviz
myactuator_rmd_description/urdf/: X12_150.xacro  X8ProV2.xacro  myactuator_rmd.ros2_control.xacro  myactuator_rmd.xacro  standalone.urdf.xacro
myactuator_rmd_description/urdf/X8ProV2/: X8ProV2.xacro  standalone.urdf.xacro
myactuator_rmd_hardware/: CMakeLists.txt  ReadMe.md  myactuator_rmd_hardware.xml  package.xml
myactuator_rmd_hardware/include/myactuator_rmd_hardware/: conversions.hpp  low_pass_filter.hpp  myactuator_rmd_hardware_interface.hpp  visibility_control.hpp
myactuator_rmd_hardware/src/: myactuator_rmd_hardware_interface.cpp
myactuator_rmd_interfaces/: CMakeLists.txt  package.xml
myactuator_rmd_interfaces/msg/: CurrentPhase.msg  MotorStatus.msg
myactuator_rmd_ros/: CMakeLists.txt  package.xml
