<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>myactuator_rmd_hardware</name>
  <version>0.0.1</version>
  <description>ROS 2 control hardware interface for MyActuator RMD-X-series actuators</description>
  <maintainer email="tobit.flatscher@outlook.com">Tobit Flatscher</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>myactuator_rmd</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
